[update:] added tomcat7 maven plugin